--- a/Deployment.yml
+++ b/Deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: cont-1
-        image: shaikmustafa/dm
+        image: pichashy/myrepo:Firstwebpage
         ports:
         - containerPort: 80
